# startkit

./: .gitignore  README.md  challenge_1.py  challenge_2.py  main.py  pyproject.toml  startkit_dns.py
challenge1/: __init__.py  artifacts.py  config.py  data.py  models.py  pipeline.py  stages.py  training.py  workflow.py
challenge1/data/: __init__.py  datasets.py  preprocessing.py  splits.py  windowing.py
utils/: __init__.py  custom_proxy.py  local_scoring.py  submission.py
